# Zero-defect-credit-risk-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
configs/: application_quality.yaml  application_train_quality.yaml  pandera_application_train.py  pandera_schemas.py
data/processed/: fairness_summary.csv  metrics_summary.csv
models/: xgboost_baseline.pkl
notebooks/: 00_pipeline_principal_credit_risk_fr.ipynb  01_data_qc_fr.ipynb  01_data_qc_global.ipynb  01_data_qc_global_final.ipynb  01_data_qc_global_final_v2.ipynb  01_data_qc_global_final_v3.ipynb  02_validation_pandera_application_train.ipynb  03_pipeline_modelisation_xgboost.ipynb  04_analyse_data_drift.ipynb  PIPELINE_MASTER.ipynb  Pipeline_Finale.ipynb
notebooks/archives/: 02_feature_engineering_merge_fr_complet.ipynb
notebooks/models/: xgboost_baseline.pkl
