[project]
name = "qualité-controle-données"
version = "0.1.0"
description = ""
authors = [
    {name = "Yazid",email = "alouiyaz78@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = ["numpy (>=2.4.3,<3.0.0)", "pandas (>=3.0.1,<4.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "matplotlib (>=3.10.8,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "pandera (>=0.30.0,<0.31.0)", "pyyaml (>=6.0.3,<7.0.0)", "pytest (>=9.0.2,<10.0.0)", "fairlearn (>=0.13.0,<0.14.0)", "scipy (>=1.15.3,<2.0.0)", "missingno (>=0.5.2,<0.6.0)"]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
